<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_get_you"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_marginVertical="20dp"
            android:src="@drawable/ic_avatar" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_et_bg"
            android:hint="@string/username"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_et_bg"
            android:hint="@string/email"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_confirm_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_et_bg"
            android:hint="@string/confirm_email"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_et_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_et_bg"
            android:hint="@string/phone_number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00FF75"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>