<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interests"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_may_select"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_algorithms_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Algorithms"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_data_structures_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Data Structures"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_web_development_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Web Development"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_testing_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Testing"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_android_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Android"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ios_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="IOS"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_mysql_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="MySQL"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_oracle_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Oracle"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_javascript_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Javascript"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_react_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="React"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_vue_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text="Vue"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_net_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ADD8E6"
                    android:text=".NET"
                    android:textColor="#000000"
                    app:cornerRadius="5dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00FF75"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />
</LinearLayout>
